--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="sub-box container-label">
-                    <label>By signing you are accepting authorization for the use of your personal data. <a href="termsConditions.php" target="_blank">See Terms and Conditions</a></label>
+                    <label>By signing you are accepting authorization for the use of your personal data. <a href="termsConditions.html" target="_blank">See Terms and Conditions</a></label>
                 </div>
             </div>
             <div class="box result">
@@ -187,14 +187,6 @@
                 <input type="submit" class="txtSend" value="Submit" id="submit"></input>
             </div>
         </form>
-    </div>
-    <div class="popup">
-        <div class="sub-popup">
-            <label>Signature successfully uploaded</label>
-        </div>
-        <div class="sub-popup">
-            <input type="button" value="Accept" class="txtSend" id="txtAccept">
-        </div>
     </div>
 </body>
 
