--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jspdf.min.js"></script>
     <script src="js/jquery.js"></script>
     <title>My Mobile LLC</title>
 </head>
@@ -124,7 +125,7 @@
             </div>
             <div class="box _address">
                 <div class="flex">
-                    <div><label>Address</label></div>
+                    <div><label>Current Address</label></div>
                     <div><input name="address" id="address" type="text" class="input" placeholder="Enter Address" autocomplete="nope"></div>
                 </div>
             </div>
@@ -191,5 +192,6 @@
 </body>
 
 </html>
+
 <script src="js/main.js"></script>
 <script src="js/select.js"></script>
