--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
             <!-- SEGUNDA DIRECCION -->
             <div class="box _address">
                 <div class="flex">
+                    <div><label>Optional</label></div>
+                </div>
+            </div>
+            <div class="box _address">
+                <div class="flex">
                     <div><label>Other Street</label></div>
                     <div><input name="address" id="address_3" type="text" class="input" placeholder="Enter Street" autocomplete="nope"></div>
                 </div>
@@ -248,6 +253,11 @@
             <hr style="margin-bottom: 20px; margin-top: 20px;">
 
             <!-- TERCERA DIRECCION -->
+            <div class="box _address">
+                <div class="flex">
+                    <div><label>Optional</label></div>
+                </div>
+            </div>
             <div class="box _address">
                 <div class="flex">
                     <div><label>Other Street</label></div>
@@ -330,6 +340,11 @@
                 <input type="submit" class="txtSend" value="Submit" id="submit"></input>
             </div>
         </form>
+    </div>
+    <div class="pop fixed">
+        <label>Please upload photo with extension JPG or JPGE, re-upload all photos</label>
+        <input type="button" class="txtSend" value="Accept" id="aceptar"></input>
+        <input type="button" class="txtSend" value="Accept" id="reload" style="display: none;"></input>
     </div>
 </body>
 
